@@ -349,8 +349,10 @@ function rcmail_message_contactphoto($attrib)
             '_task'   => 'addressbook',
             '_action' => 'photo',
             '_email'  => $MESSAGE->sender['mailto'],
-            '_alt'    => $placeholder
+            '_alt'    => $placeholder,
         ));
+
+        $attrib['onerror'] = "this.src = '" . ($placeholder ? $placeholder : 'program/resources/blank.gif') . "'";
     }
     else {
         $photo_img = $placeholder ? $placeholder : 'program/resources/blank.gif';
